--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"format_version": 1,
 	"header": {
-		"description": "The Shader you wanted.\n Made by §b@channel_nari",
-		"name": "Impression Shadow Shader BE v0.01",
+		"description": "§dThanks §f for Download!! \n Made by §b@channel_nari",
+		"name": "Impression Shadow Shader BE v0.6",
 		"uuid": "1ecdbfe1-0c33-4495-9d40-fe91b09a2d6d",
 		"version": [0, 0, 0],
 		"min_engine_version": [1, 8, 0]
