--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"format_version": 1,
 	"header": {
 		"description": "§dThanks§f for Download!! \n Made by §b@channel_nari",
-		"name": "Impressive Shadow Shader BE β v1.5",
+		"name": "Impressive Shadow Shader BE v1.1",
 		"uuid": "1ecdbfe1-0c33-4495-9d40-fe91b09a2d6d",
 		"version": [0, 0, 0],
 		"min_engine_version": [1, 8, 0]
