--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"format_version": 1,
 	"header": {
-		"description": "§dThanks§f for Download!! \n Made by §b@channel_nari",
+		"description": "§dThanks§f for 2000 Download!! \n Made by §b@channel_nari",
 		"name": "Impressive Shadow Shader BE v1.5",
 		"uuid": "1ecdbfe1-0c33-4495-9d40-fe91b09a2d6d",
 		"version": [0, 0, 0],
